--- a/2index.html
+++ b/2index.html
@@ -75,7 +75,7 @@
 					W swoich podróżach kulinarnych – Robert Maklowicz w podróży dociera do miejsc egzotycznych – od polskiego Orientu – dookoła świata.</div>
 				<div class="main__button">
 					<div class='button__body'>
-						<a class="button__text" href="https://www.youtube.com/c/RobertMak%C5%82owicz_official/featured"> Najlepszy kanał na Youtube </a> 
+						<a class="button__text" href="https://www.youtube.com/c/RobertMak%C5%82owicz_official/featured"> Youtube </a> 
 					</div> 
 				</div>
 				<div class="main__table">
