--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 					W marcu 2020 uruchomił autorski kanał w serwisie YouTube, na którym publikowane są filmy o tematyce kulinarnej i historycznej. Od października tego samego roku prowadzi w internetowej rozgłośni newonce.radio swoją autorską audycję muzyczną Od Punk Rocka do Bartóka.
 					W swoich podróżach kulinarnych – Robert Maklowicz w podróży dociera do miejsc egzotycznych – od polskiego Orientu – dookoła świata.</div>
 				<div class="main__button">
-					<div class='button__body'>
-						<a class="button__text" href="https://www.youtube.com/c/RobertMak%C5%82owicz_official/featured"> Youtube </a> 
-					</div> 
+					<a class='button__body' href="https://www.youtube.com/c/RobertMak%C5%82owicz_official/featured">
+						<div class="button__text" > Youtube </div> 
+					</a> 
 				</div>
 				<div class="main__table">
 					<table>
