--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
 		</div>
 	</div>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="../moja_strona/js/script.js"></script>
 </body>
 </html>
