--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
 	<link
   rel="stylesheet"
-  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-/>
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css" />
 	<title> McŁowicz </title>
@@ -73,11 +72,21 @@
 						</div>
 						<div class="image-slider__slide swiper-slide">
 							<div class="image-slider__image">
-								<img src="https://scontent.fpoz4-1.fna.fbcdn.net/v/t1.15752-9/271932342_270714655158500_2524135838116207618_n.png?_nc_cat=106&ccb=1-7&_nc_sid=ae9488&_nc_ohc=-tGLaadQJQkAX8X0Cjl&_nc_ht=scontent.fpoz4-1.fna&oh=03_AVJsYD5rcnUINNfrtqTC7LNqOWIDOGSBHh_fBvi_YYD00A&oe=62B733C7">
+								<img src="https://ocdn.eu/pulscms-transforms/1/vcnk9kuTURBXy9kNGJmZjg2NC1jZmFmLTQzZjUtYjFlYi1hZmEzYTE4OWQzMjMuanBlZ5KVAwAAzQa7zQPJkwXNA0jNAfqCoTABoTEB">
+							</div>
+						</div>
+						<div class="image-slider__slide swiper-slide">
+							<div class="image-slider__image">
+								<img src="https://ocdn.eu/pulscms-transforms/1/WKSk9kuTURBXy81MzFhZmU1Mi0yMzkyLTQ0MjEtYTVjNi0zNDRiZjFiNTA1MTkuanBlZ5KVAwABzQ7AzQhMkwXNA0jNAfqCoTABoTEB">
+							</div>
+						</div>
+						<div class="image-slider__slide swiper-slide">
+							<div class="image-slider__image">
+								<img src="https://d-art.ppstatic.pl/kadry/k/r/1/1e/18/627b678065bfa_o_large.jpg">
 							</div>
 						</div>
 					</div>
-
+					<div class="swiper-pagination"></div>
 					<div class="swiper-button-prev"></div>
 					<div class="swiper-button-next"></div>
 
