--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 				<div class="main__content">
 					<div class="main__text">Jest synem marynarza Włodzimierza Makłowicza i Beaty z domu Preiss. Ma młodszą siostrę Dominikę. Pochodzi z rodziny o korzeniach polskich, ukraińskich, ormiańskich, węgierskich i austriackich.</div>
 					
-						<img src="/img/foto/1.jpg" alt="/img/foto/2.jpg" class="main__foto">
+						<img src="../moja_strona/img/foto/1.jpg" class="main__foto">
 					
 					<div class="main__text">Urodził się w 1963 roku. Aktualnie ma 53 lata, mierzy 165cm.
 						Robert Makłowicz był publicystą Gazety Wyborczej, tygodnika Wprost, Newsweek Polska  oraz Przekroju.</div>
-						<img src="/img/foto/2.jpg" alt="/img/foto/1.jpg" class="main__foto">
+						<img src="../moja_strona/img/foto/2.jpg" class="main__foto">
 					<div class="main__text">Kształcił się w Uniwersytecie Jagiellońskim.</div>
 					</div>
 				<div class="main__button">
